fix activity comment not showing in optimistic ui

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1496,7 +1496,8 @@ body {
 
 .note-overlay-wrapper,
 .course-comment-overlay-wrapper {
-  position: absolute;
+  position: fixed;
+  z-index: 1500;
   background-color: rgba(0, 0, 0, 0.25);
   display: flex;
   justify-content: center;
@@ -1753,6 +1754,12 @@ body {
   cursor: not-allowed;
   background-color: #dcdedf;
   color: #a2a4a4;
+}
+
+.save-note-btn:disabled:hover {
+  cursor: not-allowed;
+  background-color: #e9db5d;
+  color: #a69d45;
 }
 
 .save-account-changes-btn .spinner {
